@@ -248,3 +248,4 @@ suggestions:
   Alexandre de Verteuil
   Scott M
   Stefan Frühwirth
+  Pierre Campet
