@@ -182,6 +182,7 @@ int CmdShow::execute (std::string& output)
     " rule.precedence.color"
     " search.case.sensitive"
     " shell.prompt"
+    " summary.all.projects"
     " tag.indicator"
     " taskd.server"
     " taskd.ca"
