@@ -25,6 +25,8 @@
   Scott Carter).
 - TW-1590 syntax of rcfile not documented (whitespace, line continuation)
           (thanks to Scott M).
+- TW-1591 add an option to see non-pending project with command task summary
+          (thanks to Pierre Campet).
 - Setting 'bulk' to zero is interpreted as infinity, which means there is no
   amount of changes that is considered dangerous (thanks to Tomas Babej).
 - Disable hooks in bash completion script.  Hooks were previously able to
